# Updater

./: CMakeLists.txt  LICENSE  README.TXT  Updater.pro  main.cpp  updateclient.cpp  updateclient.h  win32-x-mingw32.cmake
src/: CMakeLists.txt  main.cpp  mainapplication.cpp  mainapplication.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  ui_progressdialog.h  updateclient.cpp  updateclient.h
src/resources/: mac.icns  updater.rc
src/tests/: CMakeLists.txt  TestCopyFile.cpp  TestCopyFiles.cpp  TestMoveFile.cpp  test.py
tools/: README.txt  create-update-file.py
